--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,8 @@ services:
   # Workflow App + Dapr sidecar
   ############################
   workflow-app-a:
+    environment:
+      - ROUTING_KEY=A
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -46,37 +48,38 @@ services:
       kafka:
         condition: service_healthy
     network_mode: "service:workflow-app-a"
-  ############################
+  ###########################
   # Workflow App + Dapr sidecar
-  ############################
-  # workflow-app-b:
-  #   environment:
-  #     - DAPR_GRPC_PORT=50002
-  #   build:
-  #     context: .
-  #     dockerfile: Workflow/Dockerfile
-  #   ports:
-  #     - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-  #   depends_on:
-  #     - placement
-  #   networks:
-  #     - network
-  # workflow-dapr-b:
-  #   image: "daprio/daprd:1.13.0-rc.4"
-  #   command: ["./daprd",
-  #    "-app-id", "workflow-a",
-  #    "-app-port", "5111",
-  #    "-dapr-grpc-port", "50002",
-  #    "-placement-host-address", "placement:50006",
-  #    "-resources-path", "/components"]
-  #   volumes:
-  #       - "./components/:/components"
-  #   depends_on:
-  #     postgres-db:
-  #       condition: service_started
-  #     kafka:
-  #       condition: service_healthy
-  #   network_mode: "service:workflow-app-b"
+  ###########################
+  workflow-app-b:
+    environment:
+      - ROUTING_KEY=B
+      - DAPR_GRPC_PORT=50002
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-b:
+    image: "daprio/daprd:1.13.0"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50002",
+     "-placement-host-address", "placement:50006",
+     "-resources-path", "/components"]
+    volumes:
+        - "./components/:/components"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-b"
   ###########################
   #Client App + Dapr sidecar
   ###########################
