--- a/components/config.yml
+++ b/components/config.yml
@@ -2,9 +2,7 @@ apiVersion: dapr.io/v1alpha1
 kind: Configuration
 metadata:
   name: daprConfig
-  namespace: default
 spec:
-  tracing:
-    samplingRate: "1"
-    zipkin:
-      endpointAddress: "http://host.docker.internal:9411/api/v2/spans"
+  features:
+    - name: SchedulerReminders
+      enabled: true
