--- a/compose-3-instances.yml
+++ b/compose-3-instances.yml
@@ -17,6 +17,8 @@ services:
   # Workflow App + Dapr sidecar
   ############################
   workflow-app-a:
+    environment:
+      - APP_INSTANCE=1
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -39,7 +41,7 @@ services:
      "-config", "/components/config.yml",
      "-log-level","info"]
     volumes:
-        - "./components/:/components"
+      - "./components/:/components"
     depends_on:
       postgres-db:
         condition: service_started
@@ -49,38 +51,79 @@ services:
   ############################
   # Workflow App + Dapr sidecar
   ############################
-  # workflow-app-b:
-  #   environment:
-  #     - DAPR_GRPC_PORT=50002
-  #   build:
-  #     context: .
-  #     dockerfile: Workflow/Dockerfile
-  #   ports:
-  #     - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-  #   depends_on:
-  #     - placement
-  #   networks:
-  #     - network
-  # workflow-dapr-b:
-  #   image: "daprio/daprd:1.13.0-rc.4"
-  #   command: ["./daprd",
-  #    "-app-id", "workflow-a",
-  #    "-app-port", "5111",
-  #    "-dapr-grpc-port", "50002",
-  #    "-placement-host-address", "placement:50006",
-  #    "-resources-path", "/components"]
-  #   volumes:
-  #       - "./components/:/components"
-  #   depends_on:
-  #     postgres-db:
-  #       condition: service_started
-  #     kafka:
-  #       condition: service_healthy
-  #   network_mode: "service:workflow-app-b"
+  workflow-app-b:
+    environment:
+      - DAPR_GRPC_PORT=50002
+      - APP_INSTANCE=2
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-b:
+    image: "daprio/daprd:1.14.0-rc.2"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50002",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler:50006",
+     "-config", "/components/config.yml",
+     "-resources-path", "/components",
+     "-log-level","info"]
+    volumes:
+        - "./components/:/components"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-b"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-c:
+    environment:
+      - DAPR_GRPC_PORT=50003
+      - APP_INSTANCE=3
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3502:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-c:
+    image: "daprio/daprd:1.14.0-rc.2"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50003",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler:50006",
+     "-config", "/components/config.yml",
+     "-resources-path", "/components",
+     "-log-level","info"]
+    volumes:
+        - "./components/:/components"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-c"
   ###########################
   #Client App + Dapr sidecar
   ###########################
   client-app:
+    environment:
+      - PARTITION_KEYS=1:2:4
     build:
       context: .
       dockerfile: Client/Dockerfile
@@ -173,7 +216,7 @@ services:
       KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
       KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
       KAFKA_JMX_PORT: 9997
-      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_NUM_PARTITIONS: 3
   ############################
   # Kafka UI
   ############################
