--- a/compose-5-instances-3-schedulers.yml
+++ b/compose-5-instances-3-schedulers.yml
@@ -49,6 +49,150 @@ services:
       kafka:
         condition: service_healthy
     network_mode: "service:workflow-app-a"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-b:
+    environment:
+      - DAPR_GRPC_PORT=50002
+      - APP_INSTANCE=2
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-b:
+    image: "daprio/daprd:1.14.0-rc.3"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50002",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-b"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-c:
+    environment:
+      - DAPR_GRPC_PORT=50003
+      - APP_INSTANCE=3
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3502:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-c:
+    image: "daprio/daprd:1.14.0-rc.3"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50003",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-c"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-d:
+    environment:
+      - DAPR_GRPC_PORT=50004
+      - APP_INSTANCE=4
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3503:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-d:
+    image: "daprio/daprd:1.14.0-rc.3"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50004",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-d"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-e:
+    environment:
+      - DAPR_GRPC_PORT=50005
+      - APP_INSTANCE=5
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3504:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-e:
+    image: "daprio/daprd:1.14.0-rc.3"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50005",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-e"
   ###########################
   #Client App + Dapr sidecar
   ###########################
@@ -58,7 +202,6 @@ services:
       dockerfile: Client/Dockerfile
     ports:
       - "5112:5111"
-      - "3503:3500"
     networks:
       - network
   client-dapr:
@@ -86,7 +229,7 @@ services:
     networks:
       - network
 
-  # ############################
+ # ############################
   # # Dapr Scheduler service
   # ############################
   scheduler-0:
@@ -134,6 +277,7 @@ services:
       - ./dapr_scheduler/2:/var/run/dapr/scheduler
     networks:
       - network
+
   ############################
   # Zookeeper 
   ############################
@@ -179,7 +323,7 @@ services:
       KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
       KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
       KAFKA_JMX_PORT: 9997
-      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_NUM_PARTITIONS: 10
   ############################
   # Kafka UI
   ############################
