--- a/compose-10-instances-3-schedulers.yml
+++ b/compose-10-instances-3-schedulers.yml
@@ -36,7 +36,7 @@ services:
      "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -72,7 +72,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50002",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -108,7 +108,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50003",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -144,7 +144,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50004",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -180,7 +180,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50005",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -216,7 +216,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50006",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -252,7 +252,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50007",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -288,7 +288,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50008",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -324,7 +324,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50009",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -360,7 +360,7 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50010",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
@@ -409,17 +409,52 @@ services:
     networks:
       - network
 
-  # ############################
+ # ############################
   # # Dapr Scheduler service
   # ############################
-  scheduler:
+  scheduler-0:
     image: "daprio/dapr:1.14.0-rc.3"
     command: ["./scheduler", 
-    "--port", "50006",
-    "--placement-address", "placement:50005"
+    "--placement-address", "placement:50005",
+    "--etcd-data-dir", "/var/run/dapr/scheduler",
+    "--replica-count", "3",
+    "--id","scheduler-0",
+    "--initial-cluster", "scheduler-0=http://scheduler-0:2380,scheduler-1=http://scheduler-1:2380,scheduler-2=http://scheduler-2:2380",
+    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
+    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
     ]
     volumes: 
-      - ./dapr/scheduler/data/0:/data-default-dapr-scheduler-server-0
+      - ./dapr_scheduler/0:/var/run/dapr/scheduler
+    networks:
+      - network
+  scheduler-1:
+    image: "daprio/dapr:1.14.0-rc.3"
+    command: ["./scheduler", 
+    "--placement-address", "placement:50005",
+    "--etcd-data-dir", "/var/run/dapr/scheduler",
+    "--replica-count", "3",
+    "--id","scheduler-1",
+    "--initial-cluster", "scheduler-1=http://scheduler-1:2380,scheduler-0=http://scheduler-0:2380,scheduler-2=http://scheduler-2:2380",
+    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
+    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
+    ]
+    volumes: 
+      - ./dapr_scheduler/1:/var/run/dapr/scheduler
+    networks:
+      - network
+  scheduler-2:
+    image: "daprio/dapr:1.14.0-rc.3"
+    command: ["./scheduler", 
+    "--placement-address", "placement:50005",
+    "--etcd-data-dir", "/var/run/dapr/scheduler",
+    "--replica-count", "3",
+    "--id","scheduler-2",
+    "--initial-cluster", "scheduler-2=http://scheduler-2:2380,scheduler-0=http://scheduler-0:2380,scheduler-1=http://scheduler-1:2380",
+    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
+    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
+    ]
+    volumes: 
+      - ./dapr_scheduler/2:/var/run/dapr/scheduler
     networks:
       - network
 
