--- a/compose-3-instance-no-scheduler.yml
+++ b/compose-3-instance-no-scheduler.yml
@@ -31,14 +31,13 @@ services:
     networks:
       - network
   workflow-dapr-a:
-    image: "daprio/daprd:1.14.0-rc.3"
+    image: "daprio/daprd:1.13.5"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
      "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-config", "/dapr-config/config.yml",
      "-log-level","info"]
     volumes:
       - "./components/:/components"
@@ -49,6 +48,76 @@ services:
       kafka:
         condition: service_healthy
     network_mode: "service:workflow-app-a"
+############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-b:
+    environment:
+      - DAPR_GRPC_PORT=50002
+      - APP_INSTANCE=2
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-b:
+    image: "daprio/daprd:1.13.5"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50002",
+     "-placement-host-address", "placement:50005",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-b"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-c:
+    environment:
+      - DAPR_GRPC_PORT=50003
+      - APP_INSTANCE=3
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3502:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-c:
+    image: "daprio/daprd:1.13.5"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50003",
+     "-placement-host-address", "placement:50005",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-c"
   ###########################
   #Client App + Dapr sidecar
   ###########################
@@ -62,7 +131,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.14.0-rc.3"
+    image: "daprio/daprd:1.13.5"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -79,59 +148,10 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.14.0-rc.3"
+    image: "daprio/dapr:1.13.5"
     command: ["./placement", 
     "-port", "50005",
     "-log-level","warn"]
-    networks:
-      - network
-
-  # ############################
-  # # Dapr Scheduler service
-  # ############################
-  scheduler-0:
-    image: "daprio/dapr:1.14.0-rc.3"
-    command: ["./scheduler", 
-    "--placement-address", "placement:50005",
-    "--etcd-data-dir", "/var/run/dapr/scheduler",
-    "--replica-count", "3",
-    "--id","scheduler-0",
-    "--initial-cluster", "scheduler-0=http://scheduler-0:2380,scheduler-1=http://scheduler-1:2380,scheduler-2=http://scheduler-2:2380",
-    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
-    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
-    ]
-    volumes: 
-      - ./dapr_scheduler/0:/var/run/dapr/scheduler
-    networks:
-      - network
-  scheduler-1:
-    image: "daprio/dapr:1.14.0-rc.3"
-    command: ["./scheduler", 
-    "--placement-address", "placement:50005",
-    "--etcd-data-dir", "/var/run/dapr/scheduler",
-    "--replica-count", "3",
-    "--id","scheduler-1",
-    "--initial-cluster", "scheduler-1=http://scheduler-1:2380,scheduler-0=http://scheduler-0:2380,scheduler-2=http://scheduler-2:2380",
-    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
-    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
-    ]
-    volumes: 
-      - ./dapr_scheduler/1:/var/run/dapr/scheduler
-    networks:
-      - network
-  scheduler-2:
-    image: "daprio/dapr:1.14.0-rc.3"
-    command: ["./scheduler", 
-    "--placement-address", "placement:50005",
-    "--etcd-data-dir", "/var/run/dapr/scheduler",
-    "--replica-count", "3",
-    "--id","scheduler-2",
-    "--initial-cluster", "scheduler-2=http://scheduler-2:2380,scheduler-0=http://scheduler-0:2380,scheduler-1=http://scheduler-1:2380",
-    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
-    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
-    ]
-    volumes: 
-      - ./dapr_scheduler/2:/var/run/dapr/scheduler
     networks:
       - network
   ############################
@@ -179,7 +199,7 @@ services:
       KAFKA_LOG4J_ROOT_LOGLEVEL: ERROR
       KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR,kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR
       KAFKA_JMX_PORT: 9997
-      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_NUM_PARTITIONS: 3
   ############################
   # Kafka UI
   ############################
