many updates (rc6)

--- a/compose-1-instances-1-schedulers-in-mem.yml
+++ b/compose-1-instances-1-schedulers-in-mem.yml
@@ -36,12 +36,12 @@ services:
      "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
+     "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
     volumes:
-      - "./components/:/components"
+      - "./components-in-mem/:/components"
       - "./dapr-config/:/dapr-config"
     depends_on:
       postgres-db:
@@ -49,42 +49,6 @@ services:
       kafka:
         condition: service_healthy
     network_mode: "service:workflow-app-a"
-  ############################
-  # Workflow App + Dapr sidecar
-  ############################
-  workflow-app-b:
-    environment:
-      - DAPR_GRPC_PORT=50002
-      - APP_INSTANCE=2
-    build:
-      context: .
-      dockerfile: Workflow/Dockerfile
-    ports:
-      - "3501:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
-    depends_on:
-      - placement
-    networks:
-      - network
-  workflow-dapr-b:
-    image: "daprio/daprd:1.14.0-rc.6"
-    command: ["./daprd",
-     "-app-id", "workflow-a",
-     "-app-port", "5111",
-     "-dapr-grpc-port", "50002",
-     "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler:50006",
-     "-resources-path", "/components",
-     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
-     "-log-level","info"]
-    volumes:
-      - "./components/:/components"
-      - "./dapr-config/:/dapr-config"
-    depends_on:
-      postgres-db:
-        condition: service_started
-      kafka:
-        condition: service_healthy
-    network_mode: "service:workflow-app-b"
   ###########################
   #Client App + Dapr sidecar
   ###########################
@@ -94,7 +58,6 @@ services:
       dockerfile: Client/Dockerfile
     ports:
       - "5112:5111"
-      - "3503:3500"
     networks:
       - network
   client-dapr:
@@ -122,17 +85,18 @@ services:
     networks:
       - network
 
-  # ############################
+ # ############################
   # # Dapr Scheduler service
   # ############################
-  scheduler:
+  scheduler-0:
     image: "daprio/dapr:1.14.0-rc.6"
     command: ["./scheduler", 
     "--port", "50006",
-    "--placement-address", "placement:50005"
+    "--placement-address", "placement:50005",
+    "--etcd-data-dir", "/var/run/dapr/scheduler",
     ]
     volumes: 
-      - ./dapr/scheduler/data/0:/data-default-dapr-scheduler-server-0
+      - ./dapr_scheduler/0:/var/run/dapr/scheduler
     networks:
       - network
 
