--- a/compose-10-instances-1-schedulers-in-mem.yml
+++ b/compose-10-instances-1-schedulers-in-mem.yml
@@ -36,12 +36,12 @@ services:
      "-app-id", "workflow-a",
      "-app-port", "5111",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
     volumes:
-      - "./components/:/components"
+      - "./components-in-mem/:/components"
       - "./dapr-config/:/dapr-config"
     depends_on:
       postgres-db:
@@ -72,12 +72,12 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50002",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
     volumes:
-      - "./components/:/components"
+      - "./components-in-mem/:/components"
       - "./dapr-config/:/dapr-config"
     depends_on:
       postgres-db:
@@ -108,12 +108,12 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50003",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
     volumes:
-      - "./components/:/components"
+      - "./components-in-mem/:/components"
       - "./dapr-config/:/dapr-config"
     depends_on:
       postgres-db:
@@ -144,12 +144,12 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50004",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
     volumes:
-      - "./components/:/components"
+      - "./components-in-mem/:/components"
       - "./dapr-config/:/dapr-config"
     depends_on:
       postgres-db:
@@ -180,12 +180,12 @@ services:
      "-app-port", "5111",
      "-dapr-grpc-port", "50005",
      "-placement-host-address", "placement:50005",
-     "-scheduler-host-address", "scheduler-0:50006,scheduler-1:50006,scheduler-2:50006",
+     "-scheduler-host-address", "scheduler-0:50006",
      "-resources-path", "/components",
      "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
      "-log-level","info"]
     volumes:
-      - "./components/:/components"
+      - "./components-in-mem/:/components"
       - "./dapr-config/:/dapr-config"
     depends_on:
       postgres-db:
@@ -193,6 +193,186 @@ services:
       kafka:
         condition: service_healthy
     network_mode: "service:workflow-app-e"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-f:
+    environment:
+      - DAPR_GRPC_PORT=50006
+      - APP_INSTANCE=6
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3505:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-f:
+    image: "daprio/daprd:1.14.0-rc.6"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50006",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components-in-mem/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-f"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-g:
+    environment:
+      - DAPR_GRPC_PORT=50007
+      - APP_INSTANCE=7
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3506:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-g:
+    image: "daprio/daprd:1.14.0-rc.6"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50007",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components-in-mem/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-g"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-h:
+    environment:
+      - DAPR_GRPC_PORT=50008
+      - APP_INSTANCE=8
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3507:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-h:
+    image: "daprio/daprd:1.14.0-rc.6"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50008",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components-in-mem/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-h"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-i:
+    environment:
+      - DAPR_GRPC_PORT=50009
+      - APP_INSTANCE=9
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3508:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-i:
+    image: "daprio/daprd:1.14.0-rc.6"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50009",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components-in-mem/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-i"
+  ############################
+  # Workflow App + Dapr sidecar
+  ############################
+  workflow-app-j:
+    environment:
+      - DAPR_GRPC_PORT=50010
+      - APP_INSTANCE=10
+    build:
+      context: .
+      dockerfile: Workflow/Dockerfile
+    ports:
+      - "3509:3500" # only important so we can reach the Dapr HTTP sidecar from the host for testing purposes
+    depends_on:
+      - placement
+    networks:
+      - network
+  workflow-dapr-j:
+    image: "daprio/daprd:1.14.0-rc.6"
+    command: ["./daprd",
+     "-app-id", "workflow-a",
+     "-app-port", "5111",
+     "-dapr-grpc-port", "50010",
+     "-placement-host-address", "placement:50005",
+     "-scheduler-host-address", "scheduler-0:50006",
+     "-resources-path", "/components",
+     "-config", "/dapr-config/config-with-schedule-reminders-feature.yml",
+     "-log-level","info"]
+    volumes:
+      - "./components-in-mem/:/components"
+      - "./dapr-config/:/dapr-config"
+    depends_on:
+      postgres-db:
+        condition: service_started
+      kafka:
+        condition: service_healthy
+    network_mode: "service:workflow-app-j"
   ###########################
   #Client App + Dapr sidecar
   ###########################
@@ -235,46 +415,12 @@ services:
   scheduler-0:
     image: "daprio/dapr:1.14.0-rc.6"
     command: ["./scheduler", 
+    "--port", "50006",
     "--placement-address", "placement:50005",
     "--etcd-data-dir", "/var/run/dapr/scheduler",
-    "--replica-count", "3",
-    "--id","scheduler-0",
-    "--initial-cluster", "scheduler-0=http://scheduler-0:2380,scheduler-1=http://scheduler-1:2380,scheduler-2=http://scheduler-2:2380",
-    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
-    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
     ]
     volumes: 
       - ./dapr_scheduler/0:/var/run/dapr/scheduler
-    networks:
-      - network
-  scheduler-1:
-    image: "daprio/dapr:1.14.0-rc.6"
-    command: ["./scheduler", 
-    "--placement-address", "placement:50005",
-    "--etcd-data-dir", "/var/run/dapr/scheduler",
-    "--replica-count", "3",
-    "--id","scheduler-1",
-    "--initial-cluster", "scheduler-1=http://scheduler-1:2380,scheduler-0=http://scheduler-0:2380,scheduler-2=http://scheduler-2:2380",
-    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
-    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
-    ]
-    volumes: 
-      - ./dapr_scheduler/1:/var/run/dapr/scheduler
-    networks:
-      - network
-  scheduler-2:
-    image: "daprio/dapr:1.14.0-rc.6"
-    command: ["./scheduler", 
-    "--placement-address", "placement:50005",
-    "--etcd-data-dir", "/var/run/dapr/scheduler",
-    "--replica-count", "3",
-    "--id","scheduler-2",
-    "--initial-cluster", "scheduler-2=http://scheduler-2:2380,scheduler-0=http://scheduler-0:2380,scheduler-1=http://scheduler-1:2380",
-    "--etcd-client-ports", "scheduler-0=2379,scheduler-1=2379,scheduler-2=2379",
-    "--etcd-client-http-ports", "scheduler-0=2330,scheduler-1=2330,scheduler-2=2330"
-    ]
-    volumes: 
-      - ./dapr_scheduler/2:/var/run/dapr/scheduler
     networks:
       - network
 
