--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-   <PackageReference Include="Dapr.Client" Version="1.13.0" />
+   <PackageReference Include="Dapr.Client" Version="1.14.0-rc02" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Dapr.AspNetCore" Version="1.13.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.14.0-rc02" />
   </ItemGroup>
 
 </Project>
