--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
 
-    <PackageReference Include="Dapr.Client" Version="1.13.1" />
-    <PackageReference Include="Dapr.Workflow" Version="1.13.1" />
+    <PackageReference Include="Dapr.Client" Version="1.14.0-rc02" />
+    <PackageReference Include="Dapr.Workflow" Version="1.14.0-rc02" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Dapr.AspNetCore" Version="1.13.1" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.14.0-rc02" />
   </ItemGroup>
 
 </Project>
