--- a/compose-1-instances-1-schedulers-in-mem.yml
+++ b/compose-1-instances-1-schedulers-in-mem.yml
@@ -31,7 +31,7 @@ services:
     networks:
       - network
   workflow-dapr-a:
-    image: "daprio/daprd:1.14.0-rc10"
+    image: "daprio/daprd:1.14.0-rc.10"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -61,7 +61,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.14.0-rc10"
+    image: "daprio/daprd:1.14.0-rc.10"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -78,7 +78,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.14.0-rc10"
+    image: "daprio/dapr:1.14.0-rc.10"
     command: ["./placement", 
     "-port", "50005",
     "-log-level","warn"]
@@ -89,7 +89,7 @@ services:
   # # Dapr Scheduler service
   # ############################
   scheduler-0:
-    image: "daprio/dapr:1.14.0-rc10"
+    image: "daprio/dapr:1.14.0-rc.10"
     command: ["./scheduler", 
     "--port", "50006",
     "--placement-address", "placement:50005",
