upgrade to dapr 1.14.1

--- a/compose-2-instances.yml
+++ b/compose-2-instances.yml
@@ -31,7 +31,7 @@ services:
     networks:
       - network
   workflow-dapr-a:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -66,7 +66,7 @@ services:
     networks:
       - network
   workflow-dapr-b:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -98,7 +98,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -115,7 +115,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.14.0-rc.10"
+    image: "daprio/dapr:1.14.1"
     command: ["./placement", 
     "-port", "50005",
     "-log-level","warn"]
@@ -126,7 +126,7 @@ services:
   # # Dapr Scheduler service
   # ############################
   scheduler:
-    image: "daprio/dapr:1.14.0-rc.10"
+    image: "daprio/dapr:1.14.1"
     command: ["./scheduler", 
     "--port", "50006",
     "--placement-address", "placement:50005"
