--- a/compose-3-instances.yml
+++ b/compose-3-instances.yml
@@ -31,7 +31,7 @@ services:
     networks:
       - network
   workflow-dapr-a:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -66,7 +66,7 @@ services:
     networks:
       - network
   workflow-dapr-b:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -102,7 +102,7 @@ services:
     networks:
       - network
   workflow-dapr-c:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -134,7 +134,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.14.0-rc.10"
+    image: "daprio/daprd:1.14.1"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -151,7 +151,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.14.0-rc.10"
+    image: "daprio/dapr:1.14.1"
     command: ["./placement", 
     "-port", "50005",
     "-log-level","warn"]
