--- a/compose-1-instance-3-schedulers.yml
+++ b/compose-1-instance-3-schedulers.yml
@@ -19,6 +19,7 @@ services:
   workflow-app-a:
     environment:
       - APP_INSTANCE=1
+      - DAPR_HTTP_PORT=3500
     build:
       context: .
       dockerfile: Workflow/Dockerfile
@@ -31,7 +32,7 @@ services:
     networks:
       - network
   workflow-dapr-a:
-    image: "daprio/daprd:1.14.1"
+    image: "daprio/daprd:1.14.4"
     command: ["./daprd",
      "-app-id", "workflow-a",
      "-app-port", "5111",
@@ -62,7 +63,7 @@ services:
     networks:
       - network
   client-dapr:
-    image: "daprio/daprd:1.14.1"
+    image: "daprio/daprd:1.14.4"
     command: ["./daprd",
     "-app-id", "client",
     "-app-port", "5111",
@@ -79,7 +80,7 @@ services:
   # Dapr placement service
   ############################
   placement:
-    image: "daprio/dapr:1.14.1"
+    image: "daprio/dapr:1.14.4"
     command: ["./placement", 
     "-port", "50005",
     "-log-level","warn"]
@@ -90,9 +91,8 @@ services:
   # # Dapr Scheduler service
   # ############################
   scheduler-0:
-    image: "daprio/dapr:1.14.1"
+    image: "daprio/dapr:1.14.4"
     command: ["./scheduler", 
-    "--placement-address", "placement:50005",
     "--etcd-data-dir", "/var/run/dapr/scheduler",
     "--replica-count", "3",
     "--id","scheduler-0",
@@ -105,9 +105,8 @@ services:
     networks:
       - network
   scheduler-1:
-    image: "daprio/dapr:1.14.1"
+    image: "daprio/dapr:1.14.4"
     command: ["./scheduler", 
-    "--placement-address", "placement:50005",
     "--etcd-data-dir", "/var/run/dapr/scheduler",
     "--replica-count", "3",
     "--id","scheduler-1",
@@ -120,9 +119,8 @@ services:
     networks:
       - network
   scheduler-2:
-    image: "daprio/dapr:1.14.1"
+    image: "daprio/dapr:1.14.4"
     command: ["./scheduler", 
-    "--placement-address", "placement:50005",
     "--etcd-data-dir", "/var/run/dapr/scheduler",
     "--replica-count", "3",
     "--id","scheduler-2",
